<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Experience">
    <LinearLayout
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/suraj_taradale"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/developer_2020"
            android:textColor="@color/beforeBtn"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:lineSpacingExtra="8sp"
            android:text="@string/exce"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/beforeBtn"
            android:textSize="16sp"
            android:textStyle="normal|bold" />


    </LinearLayout>

</ScrollView>