<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    tools:context=".FrontEnd">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:columnCount="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/html"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/todo"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/html"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_95"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="95"
                        android:progressDrawable="@drawable/progressbar" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/csss"
                    android:contentDescription="@string/todo"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/css"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_80"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="80"
                        android:progressDrawable="@drawable/css" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/js_removebg_preview"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/javascript"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_75"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="75"
                        android:progressDrawable="@drawable/javascriptpeogress" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card3"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rectjs"
                    android:contentDescription="@string/todo"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/reactjs"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_75"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar3"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="75"
                        android:progressDrawable="@drawable/css" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

</ScrollView>