<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    tools:context=".Other">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:columnCount="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/todo"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/android_studio_removebg_preview"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/android_studio"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_60"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="70"
                        android:progressDrawable="@drawable/greenprogressbar" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/bootstrap"
                    android:contentDescription="@string/todo"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/bootstrap"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_70"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/bootstrapprogress" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card2"
            android:background="#ebf3f9"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ebf3f9"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/todo"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/material_ui"
                    android:layout_margin="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/material_ui"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="textEnd"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="@string/_60"/>
                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:progress="60"
                        android:progressDrawable="@drawable/css" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </GridLayout>




</ScrollView>