<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebf3f9"
    tools:context=".Certification">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/arrow"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/certification"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginBottom="50dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >


            <androidx.cardview.widget.CardView
                android:id="@+id/fullstack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/todo"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:src="@drawable/suraj_taradale" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/javascript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullstack"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/todo"
                    android:padding="15dp"
                    android:src="@drawable/javascriptcertification" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/FrontEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/javascript"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/todo"
                    android:padding="15dp"
                    android:src="@drawable/frontendcertification" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/webres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/FrontEnd"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    android:contentDescription="@string/todo"
                    android:padding="15dp"
                    android:src="@drawable/webrescertification" />
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</RelativeLayout>
